results/scraper/launchpad-without-comments/1772166
qemu 2.4.1: dereferencing pointer to incomplete type ‘struct ucontext’

Trying to compile qemu release 2.4.1

Getting compile error 

user-exec.c: In function ‘cpu_resume_from_signal’:
user-exec.c:72:37: error: dereferencing pointer to incomplete type ‘struct ucontext’
         sigprocmask(SIG_SETMASK, &uc->uc_sigmask, NULL);
                                     ^~
user-exec.c: In function ‘cpu_arm_signal_handler’:
user-exec.c:214:41: error: dereferencing pointer to incomplete type ‘struct ucontext’